--- a/04_build_model.ipynb
+++ b/04_build_model.ipynb
@@ -1,12 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# モデル構築"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline"
+    "%matplotlib inline\n"
    ]
   },
   {
@@ -19,7 +26,7 @@
     "import torch\n",
     "from torch import nn\n",
     "from torch.utils.data import DataLoader\n",
-    "from torchvision import datasets, transforms"
+    "from torchvision import datasets, transforms\n"
    ]
   },
   {
@@ -36,8 +43,8 @@
     }
    ],
    "source": [
-    "device='cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "print('Using {} device'.format(device))"
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "print('Using {} device'.format(device))\n"
    ]
   },
   {
@@ -62,7 +69,7 @@
     "    def forward(self, x):\n",
     "        x = self.flatten(x)\n",
     "        logits = self.linear_relu_stack(x)\n",
-    "        return logits"
+    "        return logits\n"
    ]
   },
   {
@@ -101,7 +108,7 @@
    ],
    "source": [
     "model = NeuralNetwork().to(device)\n",
-    "print(model)"
+    "print(model)\n"
    ]
   },
   {
@@ -130,7 +137,7 @@
     "logits = model(X)\n",
     "pred_probab = nn.Softmax(dim=1)(logits)\n",
     "y_pred = pred_probab.argmax(1)\n",
-    "print(f\"Predicted class: {y_pred}\")"
+    "print(f\"Predicted class: {y_pred}\")\n"
    ]
   },
   {
@@ -147,8 +154,8 @@
     }
    ],
    "source": [
-    "input_image=torch.rand(3,28,28)\n",
-    "print(input_image.size())"
+    "input_image = torch.rand(3, 28, 28)\n",
+    "print(input_image.size())\n"
    ]
   },
   {
@@ -165,9 +172,9 @@
     }
    ],
    "source": [
-    "flatten=nn.Flatten()\n",
-    "flat_image=flatten(input_image)\n",
-    "print(flat_image.size())"
+    "flatten = nn.Flatten()\n",
+    "flat_image = flatten(input_image)\n",
+    "print(flat_image.size())\n"
    ]
   },
   {
@@ -184,9 +191,9 @@
     }
    ],
    "source": [
-    "layer1=nn.Linear(in_features=28*28,out_features=20)\n",
-    "hidden1=layer1(flat_image)\n",
-    "print(hidden1.size())"
+    "layer1 = nn.Linear(in_features=28*28, out_features=20)\n",
+    "hidden1 = layer1(flat_image)\n",
+    "print(hidden1.size())\n"
    ]
   },
   {
@@ -223,8 +230,8 @@
    ],
    "source": [
     "print(f\"Before ReLU: {hidden1}\\n\\n\")\n",
-    "hidden1=nn.ReLU()(hidden1)\n",
-    "print(f\"After ReLU: {hidden1}\")"
+    "hidden1 = nn.ReLU()(hidden1)\n",
+    "print(f\"After ReLU: {hidden1}\")\n"
    ]
   },
   {
@@ -241,14 +248,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seq_modules=nn.Sequential(\n",
+    "seq_modules = nn.Sequential(\n",
     "    flatten,\n",
     "    layer1,\n",
     "    nn.ReLU(),\n",
-    "    nn.Linear(20,10)\n",
+    "    nn.Linear(20, 10)\n",
     ")\n",
-    "input_image=torch.rand(3,28,28)\n",
-    "logits=seq_modules(input_image)"
+    "input_image = torch.rand(3, 28, 28)\n",
+    "logits = seq_modules(input_image)\n"
    ]
   },
   {
@@ -257,8 +264,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "softmax=nn.Softmax(dim=1)\n",
-    "pred_probab=softmax(logits)"
+    "softmax = nn.Softmax(dim=1)\n",
+    "pred_probab = softmax(logits)\n"
    ]
   },
   {
@@ -308,7 +315,7 @@
     "print(\"Model structure: \", model, \"\\n\\n\")\n",
     "\n",
     "for name, param in model.named_parameters():\n",
-    "    print(f\"Layer: {name} | Size: {param.size()} | Values: {param[:2]} \\n\")"
+    "    print(f\"Layer: {name} | Size: {param.size()} | Values: {param[:2]} \\n\")\n"
    ]
   }
  ],
