--- a/02_dataset.ipynb
+++ b/02_dataset.ipynb
@@ -1,12 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# データセットとデータローダー"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline"
+    "%matplotlib inline\n"
    ]
   },
   {
@@ -21,19 +28,19 @@
     "from torchvision.transforms import ToTensor, Lambda\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "training_data=datasets.FashionMNIST(\n",
+    "training_data = datasets.FashionMNIST(\n",
     "    root=\"data\",\n",
     "    train=True,\n",
     "    download=True,\n",
     "    transform=ToTensor()\n",
     ")\n",
     "\n",
-    "test_data=datasets.FashionMNIST(\n",
+    "test_data = datasets.FashionMNIST(\n",
     "    root=\"data\",\n",
     "    train=False,\n",
     "    download=True,\n",
     "    transform=ToTensor()\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -53,7 +60,7 @@
     }
    ],
    "source": [
-    "labels_map={\n",
+    "labels_map = {\n",
     "    0: \"T-shirt\",\n",
     "    1: \"Trouser\",\n",
     "    2: \"Pullover\",\n",
@@ -65,16 +72,16 @@
     "    8: \"Bag\",\n",
     "    9: \"Ankle Boot\",\n",
     "}\n",
-    "figure=plt.figure(figsize=(8,8))\n",
-    "cols,rows=3,3\n",
-    "for i in range(1,cols*rows+1):\n",
-    "    sample_idx=torch.randint(len(training_data),size=(1,)).item()\n",
-    "    img,label=training_data[sample_idx]\n",
-    "    figure.add_subplot(rows,cols,i)\n",
+    "figure = plt.figure(figsize=(8, 8))\n",
+    "cols, rows = 3, 3\n",
+    "for i in range(1, cols*rows+1):\n",
+    "    sample_idx = torch.randint(len(training_data), size=(1,)).item()\n",
+    "    img, label = training_data[sample_idx]\n",
+    "    figure.add_subplot(rows, cols, i)\n",
     "    plt.title(labels_map[label])\n",
     "    plt.axis(\"off\")\n",
-    "    plt.imshow(img.squeeze(),cmap=\"gray\")\n",
-    "plt.show()"
+    "    plt.imshow(img.squeeze(), cmap=\"gray\")\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -87,26 +94,27 @@
     "import pandas as pd\n",
     "from torchvision.io import read_image\n",
     "\n",
+    "\n",
     "class CustomImageDataset(Dataset):\n",
-    "    def __init__(self,annotations_file,img_dir,transform=None,target_transform=None):\n",
-    "        self,img_labels=pd.read_csv(annotations_file)\n",
-    "        self.img_dir=img_dir\n",
-    "        self.transform=transform\n",
-    "        self.target_transform=target_transform\n",
-    "    \n",
+    "    def __init__(self, annotations_file, img_dir, transform=None, target_transform=None):\n",
+    "        self, img_labels = pd.read_csv(annotations_file)\n",
+    "        self.img_dir = img_dir\n",
+    "        self.transform = transform\n",
+    "        self.target_transform = target_transform\n",
+    "\n",
     "    def __len__(self):\n",
     "        return len(self.img_labels)\n",
-    "    \n",
-    "    def __getitem__(self,idx):\n",
-    "        img_path=os.path.join(self.img_dir,self.img_labels.iloc[idx,0])\n",
-    "        image=read_image(img_path)\n",
-    "        labels=self.img_labels.iloc[idx,1]\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        img_path = os.path.join(self.img_dir, self.img_labels.iloc[idx, 0])\n",
+    "        image = read_image(img_path)\n",
+    "        labels = self.img_labels.iloc[idx, 1]\n",
     "        if self.transform:\n",
-    "            image=self.transform(image)\n",
+    "            image = self.transform(image)\n",
     "        if self.target_transform:\n",
-    "            label=self.target_transform(label)\n",
-    "        sample={\"image\":image, \"label\":label}\n",
-    "        return sample"
+    "            label = self.target_transform(label)\n",
+    "        sample = {\"image\": image, \"label\": label}\n",
+    "        return sample\n"
    ]
   },
   {
@@ -117,8 +125,8 @@
    "source": [
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "train_dataloader=DataLoader(training_data,batch_size=64,shuffle=True)\n",
-    "test_dataloader=DataLoader(test_data,batch_size=64,shuffle=True)"
+    "train_dataloader = DataLoader(training_data, batch_size=64, shuffle=True)\n",
+    "test_dataloader = DataLoader(test_data, batch_size=64, shuffle=True)\n"
    ]
   },
   {
@@ -154,27 +162,20 @@
    ],
    "source": [
     "# Display image and label.\n",
-    "train_features, train_labels=next(iter(train_dataloader))\n",
+    "train_features, train_labels = next(iter(train_dataloader))\n",
     "print(f\"Feature batch shape: {train_features.size()}\")\n",
     "print(f\"Labels batch shape: {train_labels.size()}\")\n",
-    "img=train_features[0].squeeze()\n",
-    "label=train_labels[0]\n",
-    "plt.imshow(img,cmap=\"gray\")\n",
+    "img = train_features[0].squeeze()\n",
+    "label = train_labels[0]\n",
+    "plt.imshow(img, cmap=\"gray\")\n",
     "plt.show()\n",
-    "print(f\"Label: {label}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# データセットの読み込み\n"
+    "print(f\"Label: {label}\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit ('3.9.0')",
+   "display_name": "Python 3.8.6 64-bit ('3.8.6')",
    "language": "python",
    "name": "python3"
   },
@@ -188,12 +189,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.8.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a7560b51a5508f04431098b00f0d750ef968baa3d2470a65b39ffa3aaac2ab46"
+    "hash": "c51d27b5093077bfad54762e2201752c7da265845b1e1863166083785045f503"
    }
   }
  },
