--- a/03_transform.ipynb
+++ b/03_transform.ipynb
@@ -1,12 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transform"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline"
+    "%matplotlib inline\n"
    ]
   },
   {
@@ -33,8 +40,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# メモ\n",
-    "\n",
     "機械学習の学習に適した形へと変換する必要がある。\n",
     "\n",
     "- `ToTensor()`は、PIL形式の画像（または、numpyのndarray）を`FloatTensor`に変換する。\n",
@@ -44,7 +49,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit ('3.9.0')",
+   "display_name": "Python 3.8.6 64-bit ('3.8.6')",
    "language": "python",
    "name": "python3"
   },
@@ -58,12 +63,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.8.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a7560b51a5508f04431098b00f0d750ef968baa3d2470a65b39ffa3aaac2ab46"
+    "hash": "c51d27b5093077bfad54762e2201752c7da265845b1e1863166083785045f503"
    }
   }
  },
