--- a/05_autogradqs.ipynb
+++ b/05_autogradqs.ipynb
@@ -1,28 +1,62 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 自動微分"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline"
+    "%matplotlib inline\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "x = torch.ones(5)  # input tensor\n",
+    "y = torch.zeros(3)  # expected output\n",
+    "w = torch.randn(5, 3, requires_grad=True)\n",
+    "b = torch.randn(3, requires_grad=True)\n",
+    "z = torch.matmul(x, w)+b\n",
+    "loss = torch.nn.functional.binary_cross_entropy_with_logits(z, y)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "モデルの重みなどのパラメータは損失関数に対する変数の勾配（微分値）に応じて調整される。\n",
+    "この勾配の値を計算するために`torch.autograd`という微分エンジンが組み込まれている。"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient function for z = <AddBackward0 object at 0x7ff9f0fb3a00>\n",
+      "Gradient function for loss = <BinaryCrossEntropyWithLogitsBackward0 object at 0x7ff9f0fb3850>\n"
+     ]
+    }
+   ],
    "source": [
-    "import torch\n",
-    "\n",
-    "x=torch.ones(5)\n",
-    "y=torch.zeros(3)\n",
-    "w=torch.randn(5,3,requires_grad=True)\n",
-    "b=torch.randn(3,requires_grad=True)\n",
-    "z=torch.matmul(x,w)+b\n",
-    "loss=torch.nn.functional.binary_cross_entropy_with_logits(z,y)"
+    "print('Gradient function for z =', z.grad_fn)\n",
+    "print('Gradient function for loss =', loss.grad_fn)\n"
    ]
   },
   {
@@ -34,14 +68,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gradient function for z = <AddBackward0 object at 0x0000024EBED830D0>\n",
-      "Gradient function for loss = <BinaryCrossEntropyWithLogitsBackward0 object at 0x0000024EBED835E0>\n"
+      "tensor([[0.0624, 0.1311, 0.0157],\n",
+      "        [0.0624, 0.1311, 0.0157],\n",
+      "        [0.0624, 0.1311, 0.0157],\n",
+      "        [0.0624, 0.1311, 0.0157],\n",
+      "        [0.0624, 0.1311, 0.0157]])\n",
+      "tensor([0.0624, 0.1311, 0.0157])\n"
      ]
     }
    ],
    "source": [
-    "print('Gradient function for z =',z.grad_fn)\n",
-    "print('Gradient function for loss =', loss.grad_fn)"
+    "loss.backward()\n",
+    "print(w.grad)\n",
+    "print(b.grad)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NNの各パラメータを最適化するために、損失関数の各変数の偏微分値を計算する必要がある。\n",
+    "これらの偏微分地を求めるために`loss.backward()`を実行し、`w.grad`と`b.grad`に勾配を格納する。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`requires_grad=True`であるすべてのテンソルは計算履歴が保持され、勾配計算可能な状態だが、勾配計算不要な場合（訓練済みモデルで推論するケースなど）は、`torch.no_grad()`で囲むことで勾配計算を無効化できる。"
    ]
   },
   {
@@ -53,35 +107,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.2633, 0.2009, 0.2610],\n",
-      "        [0.2633, 0.2009, 0.2610],\n",
-      "        [0.2633, 0.2009, 0.2610],\n",
-      "        [0.2633, 0.2009, 0.2610],\n",
-      "        [0.2633, 0.2009, 0.2610]])\n",
-      "tensor([0.2633, 0.2009, 0.2610])\n"
+      "True\n",
+      "False\n"
      ]
     }
    ],
    "source": [
-    "loss.backward()\n",
-    "print(w.grad)\n",
-    "print(b.grad)"
+    "z = torch.matmul(x, w)+b\n",
+    "print(z.requires_grad)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    z = torch.matmul(x, w)+b\n",
+    "print(z.requires_grad)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "z=torch.matmul(x,w)+b\n",
-    "print()"
+    "z = torch.matmul(x, w)+b\n",
+    "z_det = z.detach()\n",
+    "print(z_det.requires_grad)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "勾配の計算、追跡を不能にしたいケース：\n",
+    "- モデルのパラメータを固定したい場合\n",
+    "- 順伝搬の計算スピードを高速化したい場合"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.3 64-bit",
+   "display_name": "Python 3.8.6 64-bit ('3.8.6')",
    "language": "python",
    "name": "python3"
   },
@@ -95,12 +166,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9650cb4e16cdd4a8e8e2d128bf38d875813998db22a3c986335f89e0cb4d7bb2"
+    "hash": "c51d27b5093077bfad54762e2201752c7da265845b1e1863166083785045f503"
    }
   }
  },
